<resources>
    <string name="app_name">To do App</string>
    <string name="welcome">Welkom in Todo App</string>
    <string name="nama">Nama</string>
    <string name="hintnama">Masukkan Nama</string>
    <string name="pass">Password</string>
    <string name="repass">Re - Password</string>
    <string name="hintpass">Masukkan Password</string>
    <string name="email">Email</string>
    <string name="hintemail">Masukkan email</string>
    <string name="buttonsingin">SING IN</string>
    <string name="newakun">New to Todo App</string>
    <string name="register">Register</string>
    <string name="seldatang">Selamat Datang</string>
    <string name="task">Task</string>
    <string name="hinttask">Masukkan Task</string>
    <string name="jenistask">Jenis Task</string>
    <string name="hintjetask">Masukkan Jenis Task</string>
    <string name="timetask">Time Task</string>
    <string name="hinttitask">Masukkan Lama Task</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
</resources>