<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="114dp"
        android:layout_height="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/register" />

    <TextView
        android:id="@+id/textleblregis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/textViewRegisName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        app:layout_constraintBottom_toTopOf="@+id/editRegisName"
        app:layout_constraintEnd_toEndOf="@+id/editRegisName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editRegisName" />

    <EditText
        android:id="@+id/editRegisName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/hintnama"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textleblregis"
        app:layout_constraintVertical_bias="0.002" />

    <EditText
        android:id="@+id/editRegisEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintemail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRegisName"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/editRegisPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintpass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRegisEmail"
        app:layout_constraintVertical_bias="0.162" />

    <EditText
        android:id="@+id/editRegisrePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintpass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRegisPassword"
        app:layout_constraintVertical_bias="0.167" />

    <Button
        android:id="@+id/buttonRegisSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRegisrePassword"
        app:layout_constraintVertical_bias="0.141" />

    <TextView
        android:id="@+id/textViewRegisEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/editRegisEmail"
        app:layout_constraintEnd_toEndOf="@+id/editRegisEmail"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toStartOf="@+id/editRegisEmail" />

    <TextView
        android:id="@+id/textViewRegisPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/pass"
        app:layout_constraintBottom_toTopOf="@+id/editRegisPassword"
        app:layout_constraintEnd_toEndOf="@+id/editRegisPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editRegisPassword" />

    <TextView
        android:id="@+id/textViewRegisrePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repass"
        app:layout_constraintBottom_toTopOf="@+id/editRegisrePassword"
        app:layout_constraintEnd_toEndOf="@+id/editRegisrePassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editRegisrePassword" />
</androidx.constraintlayout.widget.ConstraintLayout>